objects/Deviated_Cost_Header__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Row_Key__c</fullName>
        <label>Header Row Key</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Deal_Header_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Deal Header ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Rep__c</fullName>
        <label>Vendor Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Rebate_Dollars__c</fullName>
        <label>YTD Rebate Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Deviated Cost Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deviated Cost Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>